# cmp4_box_avi_flv

./: .gitattributes  .gitignore  .gitmodules  README.md  add_gitmodules.sh  index.md
audio_video/: CMakeLists.txt  README.md
audio_video/H264/: CMakeLists.txt  README.md  main.cpp
audio_video/video/: CMakeLists.txt  READMD.md  main.cpp
filter/: filter.sln
filter/filter/: filter.vcxproj  main.cpp
h264/: bmp.md  git.md  yuv.md
h264/x264/: x264.sln
h264/x264/Project1/: Project1.vcxproj  Project1.vcxproj.filters  chenli.cpp
h264/x264/x264/: 00000.yuv  720bmp.yuv  729_484.yuv  bmp.cpp  bmp_yuv_h264.c  chenli.cpp  chenli.yuv  cuc_ieschool.h264  f.yuv  get_rgb.rgb  hei.c  mb.yuv  output_lena.yuv  palette.yuv  rgb2yuv.c  rgb_bmp.cpp  samples.cpp  so.yuv  songli.cpp  soongli.yuv  x264.cpp  x264.vcxproj  x264.vcxproj.filters  yuv.rgb  yuv420p.c  图像像素.txt
mp4/: mp4.md  mp4代码算法分析.md
video_encoder/: README.md
